--- a/roles/lustre/tasks/mount-client.yml
+++ b/roles/lustre/tasks/mount-client.yml
@@ -1,14 +1,52 @@
 ---
 - name: Ensure Mount Directory Exists
   file:
-    path: "/mnt/lustre/{{ fs_name }}"
+    path: "{{ item.mount_prefix }}/{{ item.fs_name }}"
     state: directory
     recurse: yes
+  register: create_mount_dir
+  with_items: "{{ _cluster.client }}"
 
 
 # TODO: We should use the built in mount system in ansible
+#- name: Mount Lustre Filesystem
+#  shell: |
+#    mount -t lustre {{ item.mgsnode }}{{ item.lnet_suffix }}:/{{ item.fs_name }} {{ item.mount_prefix }}/{{ item.fs_name }}
+#  register: mount_lustrefs
+#  with_items: "{{ _cluster.client }}"
+
+
 - name: Mount Lustre Filesystem
-  shell: |
-    mount -t lustre {{ mgsnode }}{{ lnet_suffix }}:/{{ fs_name }} /mnt/lustre/{{ fs_name }}"
+  mount:
+    fstype: lustre
+    src: "{{ item.mgsnode }}{{ item.lnet_suffix }}:/{{ item.fs_name }}"
+    path: "{{ item.mount_prefix }}/{{ item.fs_name }}"
+    state: mounted
   register: mount_lustrefs
+  with_items: "{{ _cluster.client }}"
+  # opts: "skpath=/etc/lustre,defaults,_netdev,noauto,x-systemd.automount,x-systemd.requires=lnet.service"
+
+
+#_cluster:
+#  lnet:
+#    - { suffix: "@tcp2" }
+#  mgs:
+#    - { dev_prefix: "/dev", dev: "vdb", mnt_dir: "/lustre/mgs", node: "rk94-node01" }   # node: "{{ hostvars[groups['mgs'][0]]['ansible_ssh_host'] }}" }
+#  mdts:
+#    - { dev_prefix: "/dev/mapper", dev: "mdt11", phy_dev: "sda", idx_id: "1", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node02" }
+#    - { dev_prefix: "/dev/mapper", dev: "mdt21", phy_dev: "sda", idx_id: "2", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node03" }
+#    - { dev_prefix: "/dev/mapper", dev: "mdt31", phy_dev: "sda", idx_id: "3", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node04" }
+#  osts:
+#    - { dev_prefix: "/dev/mapper", dev: "ost11", phy_dev: "sda", idx_id: "1", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node05" }
+#    - { dev_prefix: "/dev/mapper", dev: "ost12", phy_dev: "sdb", idx_id: "2", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node05" }
+#    - { dev_prefix: "/dev/mapper", dev: "ost21", phy_dev: "sda", idx_id: "3", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node06" }
+#    - { dev_prefix: "/dev/mapper", dev: "ost22", phy_dev: "sdb", idx_id: "4", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node06" }
+#    - { dev_prefix: "/dev/mapper", dev: "ost31", phy_dev: "sda", idx_id: "5", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node07" }
+#    - { dev_prefix: "/dev/mapper", dev: "ost32", phy_dev: "sdb", idx_id: "6", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node07" }
+#    - { dev_prefix: "/dev/mapper", dev: "ost41", phy_dev: "sda", idx_id: "7", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node08" }
+#    - { dev_prefix: "/dev/mapper", dev: "ost42", phy_dev: "sdb", idx_id: "8", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node08" }
+#  client:
+#    - { net2: "{{ hostvars[groups['client'][0]]['ansible_ssh_host'] }}@tcp2", lnet_suffix: "@tcp2", mount_prefix: "/mnt/lustre", fs_name: "test_fs1", msgnode: "{{ hostvars[groups['mgs'][0]]['ansible_ssh_host'] }}" }
+#
+#lustre_server: "{{ _cluster.mgs[0].node }}{{ _cluster.lnet[0].suffix }}"
 
