--- a/roles/lustre/tasks/mount-client.yml
+++ b/roles/lustre/tasks/mount-client.yml
@@ -9,22 +9,22 @@
 
 
 # TODO: We should use the built in mount system in ansible
-#- name: Mount Lustre Filesystem
-#  shell: |
-#    mount -t lustre {{ item.mgsnode }}{{ item.lnet_suffix }}:/{{ item.fs_name }} {{ item.mount_prefix }}/{{ item.fs_name }}
-#  register: mount_lustrefs
-#  with_items: "{{ _cluster.client }}"
-
-
 - name: Mount Lustre Filesystem
-  mount:
-    fstype: lustre
-    src: "{{ item.mgsnode }}{{ item.lnet_suffix }}:/{{ item.fs_name }}"
-    path: "{{ item.mount_prefix }}/{{ item.fs_name }}"
-    state: mounted
+  shell: |
+    mount -t lustre {{ item.mgsnode }}{{ item.lnet_suffix }}:/{{ item.fs_name }} {{ item.mount_prefix }}/{{ item.fs_name }}
   register: mount_lustrefs
   with_items: "{{ _cluster.client }}"
-  # opts: "skpath=/etc/lustre,defaults,_netdev,noauto,x-systemd.automount,x-systemd.requires=lnet.service"
+
+
+#- name: Mount Lustre Filesystem
+#  mount:
+#    fstype: lustre
+#    src: "{{ item.mgsnode }}{{ item.lnet_suffix }}:/{{ item.fs_name }}"
+#    path: "{{ item.mount_prefix }}/{{ item.fs_name }}"
+#    state: mounted
+#  register: mount_lustrefs
+#  with_items: "{{ _cluster.client }}"
+#  # opts: "skpath=/etc/lustre,defaults,_netdev,noauto,x-systemd.automount,x-systemd.requires=lnet.service"
 
 
 #_cluster:
