--- a/roles/lustre/vars/main.yml
+++ b/roles/lustre/vars/main.yml
@@ -5,22 +5,23 @@ _cluster:
   mgs:
     - { dev_prefix: "/dev", dev: "vdb", mnt_dir: "/lustre/mgs", node: "rk94-node01" }   # node: "{{ hostvars[groups['mgs'][0]]['ansible_ssh_host'] }}" }
   mdts:
-    - { dev_prefix: "/dev/mapper", dev: "mdt11", phy_dev: "sda", idx_id: "1", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node02" }
-    - { dev_prefix: "/dev/mapper", dev: "mdt21", phy_dev: "sda", idx_id: "2", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node03" }
-    - { dev_prefix: "/dev/mapper", dev: "mdt31", phy_dev: "sda", idx_id: "3", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node04" }
+    - { dev_prefix: "/dev/mapper", dev: "mdt11", phy_dev: "sda", idx_id: "1", fs: "t_fs1", lnet_suffix: "@tcp2", node: "rk94-node02" }
+    - { dev_prefix: "/dev/mapper", dev: "mdt21", phy_dev: "sda", idx_id: "2", fs: "t_fs1", lnet_suffix: "@tcp2", node: "rk94-node03" }
+    - { dev_prefix: "/dev/mapper", dev: "mdt31", phy_dev: "sda", idx_id: "3", fs: "t_fs1", lnet_suffix: "@tcp2", node: "rk94-node04" }
   osts:
-    - { dev_prefix: "/dev/mapper", dev: "ost11", phy_dev: "sda", idx_id: "1", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node05" }
-    - { dev_prefix: "/dev/mapper", dev: "ost12", phy_dev: "sdb", idx_id: "2", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node05" }
-    - { dev_prefix: "/dev/mapper", dev: "ost21", phy_dev: "sda", idx_id: "3", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node06" }
-    - { dev_prefix: "/dev/mapper", dev: "ost22", phy_dev: "sdb", idx_id: "4", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node06" }
-    - { dev_prefix: "/dev/mapper", dev: "ost31", phy_dev: "sda", idx_id: "5", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node07" }
-    - { dev_prefix: "/dev/mapper", dev: "ost32", phy_dev: "sdb", idx_id: "6", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node07" }
-    - { dev_prefix: "/dev/mapper", dev: "ost41", phy_dev: "sda", idx_id: "7", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node08" }
-    - { dev_prefix: "/dev/mapper", dev: "ost42", phy_dev: "sdb", idx_id: "8", fs: "test_fs1", lnet_suffix: "@tcp2", node: "rk94-node08" }
+    - { dev_prefix: "/dev/mapper", dev: "ost11", phy_dev: "sda", idx_id: "1", fs: "t_fs1", lnet_suffix: "@tcp2", node: "rk94-node05" }
+    - { dev_prefix: "/dev/mapper", dev: "ost12", phy_dev: "sdb", idx_id: "2", fs: "t_fs1", lnet_suffix: "@tcp2", node: "rk94-node05" }
+    - { dev_prefix: "/dev/mapper", dev: "ost21", phy_dev: "sda", idx_id: "3", fs: "t_fs1", lnet_suffix: "@tcp2", node: "rk94-node06" }
+    - { dev_prefix: "/dev/mapper", dev: "ost22", phy_dev: "sdb", idx_id: "4", fs: "t_fs1", lnet_suffix: "@tcp2", node: "rk94-node06" }
+    - { dev_prefix: "/dev/mapper", dev: "ost31", phy_dev: "sda", idx_id: "5", fs: "t_fs1", lnet_suffix: "@tcp2", node: "rk94-node07" }
+    - { dev_prefix: "/dev/mapper", dev: "ost32", phy_dev: "sdb", idx_id: "6", fs: "t_fs1", lnet_suffix: "@tcp2", node: "rk94-node07" }
+    - { dev_prefix: "/dev/mapper", dev: "ost41", phy_dev: "sda", idx_id: "7", fs: "t_fs1", lnet_suffix: "@tcp2", node: "rk94-node08" }
+    - { dev_prefix: "/dev/mapper", dev: "ost42", phy_dev: "sdb", idx_id: "8", fs: "t_fs1", lnet_suffix: "@tcp2", node: "rk94-node08" }
   client:
-    - { lnet_suffix: "@tcp2", mount_prefix: "/mnt/lustre", fs_name: "test_fs1", mgsnode: "{{ hostvars[groups['mgs'][0]]['ansible_ssh_host'] }}" }
-    # - { net2: "{{ hostvars[groups['client'][0]]['ansible_ssh_host'] }}@tcp2" }
+    - { lnet_suffix: "@tcp2", mount_prefix: "/mnt/lustre", fs_name: "t_fs1", mgsnode: "{{ hostvars[groups['mgs'][0]]['ansible_ssh_host'] }}" }
+  # - { net2: "{{ hostvars[groups['client'][0]]['ansible_ssh_host'] }}@tcp2" }
 
 
 lustre_server: "{{ _cluster.mgs[0].node }}{{ _cluster.lnet[0].suffix }}"
+
 
