--- a/roles/lustre/tasks/format-devices.yml
+++ b/roles/lustre/tasks/format-devices.yml
@@ -7,7 +7,8 @@
 
 - name: Format MGT
   shell: |
-    /usr/sbin/mkfs.lustre --reformat --mgs {{ item.dev_prefix }}/{{ item.dev }}
+    dd if=/dev/zero of=/dev/vdb bs=4096 count=100
+    /usr/sbin/mkfs.lustre --mgs {{ item.dev_prefix }}/{{ item.dev }}
   register: format_mgs
   loop: "{{ _cluster.mgs }}"
   when: inventory_hostname in groups['mgs']
