--- a/roles/lustre/vars/main.yml
+++ b/roles/lustre/vars/main.yml
@@ -3,23 +3,27 @@ _cluster:
   lnet:
     - { suffix: "@tcp2" }
   mgs:
-    - { dev_prefix: "/dev", dev: "vdb", mnt_dir: "/lustre/mgs", node: "rk94-node01" }   # node: "{{ hostvars[groups['mgs'][0]]['ansible_ssh_host'] }}" }
+    - { dev_prefix: "/dev", dev: "vdb", phy_dev: "vdb", mnt_dir: "/lustre/mgs", idx_id: "0", node: "rk94-node01" }   # node: "{{ hostvars[groups['mgs'][0]]['ansible_ssh_host'] }}" }
   mdts:
-    - { dev_prefix: "/dev/mapper", dev: "mdt11", phy_dev: "sda", idx_id: "0", fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node02" }
-    - { dev_prefix: "/dev/mapper", dev: "mdt21", phy_dev: "sda", idx_id: "1", fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node03" }
-    - { dev_prefix: "/dev/mapper", dev: "mdt31", phy_dev: "sda", idx_id: "2", fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node04" }
+    - { dev_prefix: "/dev/mapper", dev: "mdt11", phy_dev: "sda", idx_id: "0",  fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node02" }
+    - { dev_prefix: "/dev/mapper", dev: "mdt21", phy_dev: "sda", idx_id: "1",  fs: "tfs2", lnet_suffix: "@tcp2", node: "rk94-node03" }
+    - { dev_prefix: "/dev/mapper", dev: "mdt31", phy_dev: "sda", idx_id: "2",  fs: "tfs3", lnet_suffix: "@tcp2", node: "rk94-node04" }
   osts:
-    - { dev_prefix: "/dev/mapper", dev: "ost11", phy_dev: "sda", idx_id: "0", fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node05" }
-    - { dev_prefix: "/dev/mapper", dev: "ost12", phy_dev: "sdb", idx_id: "1", fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node05" }
-    - { dev_prefix: "/dev/mapper", dev: "ost21", phy_dev: "sda", idx_id: "2", fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node06" }
-    - { dev_prefix: "/dev/mapper", dev: "ost22", phy_dev: "sdb", idx_id: "3", fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node06" }
-    - { dev_prefix: "/dev/mapper", dev: "ost31", phy_dev: "sda", idx_id: "4", fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node07" }
-    - { dev_prefix: "/dev/mapper", dev: "ost32", phy_dev: "sdb", idx_id: "5", fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node07" }
-    - { dev_prefix: "/dev/mapper", dev: "ost41", phy_dev: "sda", idx_id: "6", fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node08" }
-    - { dev_prefix: "/dev/mapper", dev: "ost42", phy_dev: "sdb", idx_id: "7", fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node08" }
+    - { dev_prefix: "/dev/mapper", dev: "ost11", phy_dev: "sda", idx_id: "0",  fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node05" }
+    - { dev_prefix: "/dev/mapper", dev: "ost12", phy_dev: "sdb", idx_id: "1",  fs: "tfs2", lnet_suffix: "@tcp2", node: "rk94-node05" }
+    - { dev_prefix: "/dev/mapper", dev: "ost13", phy_dev: "sdc", idx_id: "2",  fs: "tfs3", lnet_suffix: "@tcp2", node: "rk94-node05" }
+    - { dev_prefix: "/dev/mapper", dev: "ost21", phy_dev: "sda", idx_id: "3",  fs: "tfs2", lnet_suffix: "@tcp2", node: "rk94-node06" }
+    - { dev_prefix: "/dev/mapper", dev: "ost22", phy_dev: "sdb", idx_id: "4",  fs: "tfs3", lnet_suffix: "@tcp2", node: "rk94-node06" }
+    - { dev_prefix: "/dev/mapper", dev: "ost23", phy_dev: "sdc", idx_id: "5",  fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node06" }
+    - { dev_prefix: "/dev/mapper", dev: "ost31", phy_dev: "sda", idx_id: "6",  fs: "tfs3", lnet_suffix: "@tcp2", node: "rk94-node07" }
+    - { dev_prefix: "/dev/mapper", dev: "ost32", phy_dev: "sdb", idx_id: "7",  fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node07" }
+    - { dev_prefix: "/dev/mapper", dev: "ost33", phy_dev: "sdc", idx_id: "8",  fs: "tfs2", lnet_suffix: "@tcp2", node: "rk94-node07" }
+    - { dev_prefix: "/dev/mapper", dev: "ost41", phy_dev: "sda", idx_id: "9",  fs: "tfs2", lnet_suffix: "@tcp2", node: "rk94-node08" }
+    - { dev_prefix: "/dev/mapper", dev: "ost42", phy_dev: "sdb", idx_id: "10", fs: "tfs1", lnet_suffix: "@tcp2", node: "rk94-node08" }
+    - { dev_prefix: "/dev/mapper", dev: "ost43", phy_dev: "sdc", idx_id: "11", fs: "tfs3", lnet_suffix: "@tcp2", node: "rk94-node08" }
   client:
     - { lnet_suffix: "@tcp2", mount_prefix: "/mnt/lustre", fs_name: "tfs1", mgsnode: "{{ hostvars[groups['mgs'][0]]['ansible_ssh_host'] }}" }
-  # - { net2: "{{ hostvars[groups['client'][0]]['ansible_ssh_host'] }}@tcp2" }
+    # - { net2: "{{ hostvars[groups['client'][0]]['ansible_ssh_host'] }}@tcp2" }
 
 
 lustre_server: "{{ _cluster.mgs[0].node }}{{ _cluster.lnet[0].suffix }}"
