--- a/roles/iscsi/vars/main.yml
+++ b/roles/iscsi/vars/main.yml
@@ -1,24 +1,52 @@
 ---
 _iscsi:
   target:
-    iqn: "iqn.2025-04.com.ddn.jtest"
+    iqn01: "iqn.2025-04.com.ddn.jtest01"
+    iqn02: "iqn.2025-04.com.ddn.jtest02"
     user: "iscsiadm"
     password: "changeme"
     os_version: "rk9"
     disks:
-      - { name: "jtest-vdisk01", base_dir: "/vdisk/iscsi01", size: "20G", group: "mdt1", mp_alias: "mdt11", iscsi_dev: "sda", client: "rk94-node02" }
-      - { name: "jtest-vdisk02", base_dir: "/vdisk/iscsi02", size: "20G", group: "mdt2", mp_alias: "mdt21", iscsi_dev: "sda", client: "rk94-node03" }
-      - { name: "jtest-vdisk03", base_dir: "/vdisk/iscsi03", size: "20G", group: "mdt3", mp_alias: "mdt31", iscsi_dev: "sda", client: "rk94-node04" }
-      - { name: "jtest-vdisk04", base_dir: "/vdisk/iscsi04", size: "20G", group: "ost1", mp_alias: "ost11", iscsi_dev: "sda", client: "rk94-node05" }
-      - { name: "jtest-vdisk05", base_dir: "/vdisk/iscsi05", size: "20G", group: "ost1", mp_alias: "ost12", iscsi_dev: "sdb", client: "rk94-node05" }
-      - { name: "jtest-vdisk06", base_dir: "/vdisk/iscsi06", size: "20G", group: "ost1", mp_alias: "ost13", iscsi_dev: "sdc", client: "rk94-node05" }
-      - { name: "jtest-vdisk07", base_dir: "/vdisk/iscsi07", size: "20G", group: "ost2", mp_alias: "ost21", iscsi_dev: "sda", client: "rk94-node06" }
-      - { name: "jtest-vdisk08", base_dir: "/vdisk/iscsi08", size: "20G", group: "ost2", mp_alias: "ost22", iscsi_dev: "sdb", client: "rk94-node06" }
-      - { name: "jtest-vdisk09", base_dir: "/vdisk/iscsi09", size: "20G", group: "ost2", mp_alias: "ost23", iscsi_dev: "sdc", client: "rk94-node06" }
-      - { name: "jtest-vdisk10", base_dir: "/vdisk/iscsi10", size: "20G", group: "ost3", mp_alias: "ost31", iscsi_dev: "sda", client: "rk94-node07" }
-      - { name: "jtest-vdisk11", base_dir: "/vdisk/iscsi11", size: "20G", group: "ost3", mp_alias: "ost32", iscsi_dev: "sdb", client: "rk94-node07" }
-      - { name: "jtest-vdisk12", base_dir: "/vdisk/iscsi12", size: "20G", group: "ost3", mp_alias: "ost33", iscsi_dev: "sdc", client: "rk94-node07" }
-      - { name: "jtest-vdisk13", base_dir: "/vdisk/iscsi13", size: "20G", group: "ost4", mp_alias: "ost41", iscsi_dev: "sda", client: "rk94-node08" }
-      - { name: "jtest-vdisk14", base_dir: "/vdisk/iscsi14", size: "20G", group: "ost4", mp_alias: "ost42", iscsi_dev: "sdb", client: "rk94-node08" }
-      - { name: "jtest-vdisk15", base_dir: "/vdisk/iscsi15", size: "20G", group: "ost4", mp_alias: "ost43", iscsi_dev: "sdc", client: "rk94-node08" }
+      - { name: "jtest-vdisk01", base_dir: "/vdisk/iscsi01", size: "10G", group: "dt1", mp_alias: "mgt11", iscsi_dev: "sda", client: "rk94-node01" }
+      - { name: "jtest-vdisk02", base_dir: "/vdisk/iscsi02", size: "10G", group: "dt1", mp_alias: "mdt11", iscsi_dev: "sda", client: "rk94-node02" }
+      - { name: "jtest-vdisk03", base_dir: "/vdisk/iscsi03", size: "10G", group: "dt2", mp_alias: "mdt21", iscsi_dev: "sda", client: "rk94-node03" }
+      - { name: "jtest-vdisk04", base_dir: "/vdisk/iscsi04", size: "10G", group: "dt2", mp_alias: "mdt31", iscsi_dev: "sda", client: "rk94-node04" }
+      - { name: "jtest-vdisk05", base_dir: "/vdisk/iscsi05", size: "10G", group: "dt3", mp_alias: "ost11", iscsi_dev: "sda", client: "rk94-node05" }
+      - { name: "jtest-vdisk06", base_dir: "/vdisk/iscsi06", size: "10G", group: "dt3", mp_alias: "ost21", iscsi_dev: "sda", client: "rk94-node06" }
+      - { name: "jtest-vdisk07", base_dir: "/vdisk/iscsi07", size: "10G", group: "dt4", mp_alias: "ost31", iscsi_dev: "sda", client: "rk94-node07" }
+      - { name: "jtest-vdisk08", base_dir: "/vdisk/iscsi08", size: "10G", group: "dt4", mp_alias: "ost41", iscsi_dev: "sda", client: "rk94-node08" }
+    clients1:
+      - { name: "jtest-vdisk01", base_dir: "/vdisk/iscsi01", size: "10G", group: "dt1", mp_alias: "mgt11", iscsi_dev: "sda", client: "rk94-node01" }
+      - { name: "jtest-vdisk01", base_dir: "/vdisk/iscsi01", size: "10G", group: "dt1", mp_alias: "mgt11", iscsi_dev: "sda", client: "rk94-node02" }
+      - { name: "jtest-vdisk02", base_dir: "/vdisk/iscsi02", size: "10G", group: "dt1", mp_alias: "mdt11", iscsi_dev: "sda", client: "rk94-node01" }
+      - { name: "jtest-vdisk02", base_dir: "/vdisk/iscsi02", size: "10G", group: "dt1", mp_alias: "mdt11", iscsi_dev: "sda", client: "rk94-node02" }
+      - { name: "jtest-vdisk03", base_dir: "/vdisk/iscsi03", size: "10G", group: "dt2", mp_alias: "mdt21", iscsi_dev: "sda", client: "rk94-node03" }
+      - { name: "jtest-vdisk03", base_dir: "/vdisk/iscsi03", size: "10G", group: "dt2", mp_alias: "mdt21", iscsi_dev: "sda", client: "rk94-node04" }
+      - { name: "jtest-vdisk04", base_dir: "/vdisk/iscsi04", size: "10G", group: "dt2", mp_alias: "mdt31", iscsi_dev: "sda", client: "rk94-node03" }
+      - { name: "jtest-vdisk04", base_dir: "/vdisk/iscsi04", size: "10G", group: "dt2", mp_alias: "mdt31", iscsi_dev: "sda", client: "rk94-node04" }
+      - { name: "jtest-vdisk05", base_dir: "/vdisk/iscsi05", size: "10G", group: "dt3", mp_alias: "ost11", iscsi_dev: "sda", client: "rk94-node05" }
+      - { name: "jtest-vdisk05", base_dir: "/vdisk/iscsi05", size: "10G", group: "dt3", mp_alias: "ost11", iscsi_dev: "sda", client: "rk94-node06" }
+      - { name: "jtest-vdisk06", base_dir: "/vdisk/iscsi06", size: "10G", group: "dt3", mp_alias: "ost21", iscsi_dev: "sda", client: "rk94-node05" }
+      - { name: "jtest-vdisk06", base_dir: "/vdisk/iscsi06", size: "10G", group: "dt3", mp_alias: "ost21", iscsi_dev: "sda", client: "rk94-node06" }
+      - { name: "jtest-vdisk07", base_dir: "/vdisk/iscsi07", size: "10G", group: "dt4", mp_alias: "ost31", iscsi_dev: "sda", client: "rk94-node07" }
+      - { name: "jtest-vdisk07", base_dir: "/vdisk/iscsi07", size: "10G", group: "dt4", mp_alias: "ost31", iscsi_dev: "sda", client: "rk94-node08" }
+      - { name: "jtest-vdisk08", base_dir: "/vdisk/iscsi08", size: "10G", group: "dt4", mp_alias: "ost41", iscsi_dev: "sda", client: "rk94-node07" }
+      - { name: "jtest-vdisk08", base_dir: "/vdisk/iscsi08", size: "10G", group: "dt4", mp_alias: "ost41", iscsi_dev: "sda", client: "rk94-node08" }
+    clients:
+      - { name: "jtest-vdisk01", base_dir: "/vdisk/iscsi01", size: "10G", group: "dt1", mp_alias: "dt111", iscsi_dev: "sda", client: "rk94-node01" }
+      - { name: "jtest-vdisk01", base_dir: "/vdisk/iscsi01", size: "10G", group: "dt1", mp_alias: "dt121", iscsi_dev: "sda", client: "rk94-node02" }
+      - { name: "jtest-vdisk02", base_dir: "/vdisk/iscsi02", size: "10G", group: "dt1", mp_alias: "dt112", iscsi_dev: "sdb", client: "rk94-node01" }
+      - { name: "jtest-vdisk02", base_dir: "/vdisk/iscsi02", size: "10G", group: "dt1", mp_alias: "dt122", iscsi_dev: "sdb", client: "rk94-node02" }
+      - { name: "jtest-vdisk03", base_dir: "/vdisk/iscsi03", size: "10G", group: "dt2", mp_alias: "dt211", iscsi_dev: "sda", client: "rk94-node03" }
+      - { name: "jtest-vdisk03", base_dir: "/vdisk/iscsi03", size: "10G", group: "dt2", mp_alias: "dt221", iscsi_dev: "sda", client: "rk94-node04" }
+      - { name: "jtest-vdisk04", base_dir: "/vdisk/iscsi04", size: "10G", group: "dt2", mp_alias: "dt212", iscsi_dev: "sdb", client: "rk94-node03" }
+      - { name: "jtest-vdisk04", base_dir: "/vdisk/iscsi04", size: "10G", group: "dt2", mp_alias: "dt222", iscsi_dev: "sdb", client: "rk94-node04" }
+      - { name: "jtest-vdisk05", base_dir: "/vdisk/iscsi05", size: "10G", group: "dt3", mp_alias: "dt311", iscsi_dev: "sda", client: "rk94-node05" }
+      - { name: "jtest-vdisk05", base_dir: "/vdisk/iscsi05", size: "10G", group: "dt3", mp_alias: "dt321", iscsi_dev: "sda", client: "rk94-node06" }
+      - { name: "jtest-vdisk06", base_dir: "/vdisk/iscsi06", size: "10G", group: "dt3", mp_alias: "dt312", iscsi_dev: "sdb", client: "rk94-node05" }
+      - { name: "jtest-vdisk06", base_dir: "/vdisk/iscsi06", size: "10G", group: "dt3", mp_alias: "dt322", iscsi_dev: "sdb", client: "rk94-node06" }
+      - { name: "jtest-vdisk07", base_dir: "/vdisk/iscsi07", size: "10G", group: "dt4", mp_alias: "dt411", iscsi_dev: "sda", client: "rk94-node07" }
+      - { name: "jtest-vdisk07", base_dir: "/vdisk/iscsi07", size: "10G", group: "dt4", mp_alias: "dt421", iscsi_dev: "sda", client: "rk94-node08" }
+      - { name: "jtest-vdisk08", base_dir: "/vdisk/iscsi08", size: "10G", group: "dt4", mp_alias: "dt412", iscsi_dev: "sdb", client: "rk94-node07" }
+      - { name: "jtest-vdisk08", base_dir: "/vdisk/iscsi08", size: "10G", group: "dt4", mp_alias: "dt422", iscsi_dev: "sdb", client: "rk94-node08" }
 
