--- a/roles/lustre/tasks/format-devices.yml
+++ b/roles/lustre/tasks/format-devices.yml
@@ -5,10 +5,10 @@
     state: present
 
 
-- name: Format MGT
+- name: Format MGTs
   shell: |
-    dd if=/dev/zero of=/dev/vdb bs=4096 count=100
-    /usr/sbin/mkfs.lustre --mgs {{ item.dev_prefix }}/{{ item.dev }}
+    dd if=/dev/zero of=/dev/{{ item.dev }} bs=1024 count=1000
+    /usr/sbin/mkfs.lustre --reformat --mgs {{ item.dev_prefix }}/{{ item.dev }}
   register: format_mgs
   loop: "{{ _cluster.mgs }}"
   when: inventory_hostname in groups['mgs']
@@ -16,20 +16,25 @@
 
 - name: Format MDTs
   shell: |
+    dd if=/dev/zero of=/dev/{{ item.dev }} bs=1024 count=1000
     /usr/sbin/mkfs.lustre --reformat --mdt --fsname={{ item.fs }} --index={{ item.idx_id }} \
     --mgsnode={{ hostvars[groups['mgs'][0]]['ansible_ssh_host'] }}{{ item.lnet_suffix }} \
     {{ item.dev_prefix }}/{{ item.dev }}
   register: format_mdt
+  until: format_mdt is succeeded
   loop: "{{ _cluster.mdts }}"
   when: ( item.node == inventory_hostname ) and ( inventory_hostname in groups['mds'] or inventory_hostname in groups['dne'] )
 
 
 - name: Format OSTs
   shell: |
+    dd if=/dev/zero of=/dev/{{ item.dev }} bs=1024 count=1000
     /usr/sbin/mkfs.lustre --reformat --ost --fsname={{ item.fs }} --index={{ item.idx_id }} \
     --mgsnode={{ hostvars[groups['mgs'][0]]['ansible_ssh_host'] }}{{ item.lnet_suffix }} \
     {{ item.dev_prefix }}/{{ item.dev }}
   register: format_ost
+  until: format_ost is succeeded
+  retries: 5
   loop: "{{ _cluster.osts }}"
   when: ( item.node == inventory_hostname ) and inventory_hostname in groups['oss']
 
