--- a/roles/iscsi/tasks/mp/disable-multipath.yml
+++ b/roles/iscsi/tasks/mp/disable-multipath.yml
@@ -74,7 +74,7 @@
   with_items: "{{ _iscsi.target.clients }}"
 
 
-- name: force Stop Multipath
+- name: Force Stop Multipath
   shell: |
     multipath -F
   register: force_stop_multipath
