--- a/roles/iscsi/tasks/set-facts.yml
+++ b/roles/iscsi/tasks/set-facts.yml
@@ -5,13 +5,13 @@
     netdev2: "{{ ansible_interfaces | map('regex_replace', '^', 'ansible_') | map('extract', vars) | selectattr('ipv4', 'defined') | selectattr('ipv4.address', 'match', _lustre.net.ipaddr2 ) | map(attribute='device') | first }}"
 
 
-- name: Get IP Address from provided network device name
+- name: Get IP Address from Provided Network Device Name
   set_fact:
     ipaddr0: "{{ hostvars[inventory_hostname]['ansible_'~netdev0].ipv4.address }}"
     ipaddr2: "{{ hostvars[inventory_hostname]['ansible_'~netdev2].ipv4.address }}"
 
 
-- name: Define fact for all worker's first ip addresses
+- name: Define fact for all Worker's First IP Addresses
   set_fact:
     all_net0_ipaddrs: "{{ groups['all'] | map('extract', hostvars, ['ansible_'~netdev0, 'ipv4', 'address']) | join(',') }}"
     all_net2_ipaddrs: "{{ groups['all'] | map('extract', hostvars, ['ansible_'~netdev2, 'ipv4', 'address']) | join(',') }}"
