--- a/roles/lustre/tasks/cleanup-devices.yml
+++ b/roles/lustre/tasks/cleanup-devices.yml
@@ -1,70 +1,54 @@
 ---
-#- name: Remove Physical Volumes
-#  shell: |
-#    pvremove -y -ff {{ item }}
-#  register: remove_pvs
-#  ignore_errors: true
-#  # when: item.type == "lvmthin"
-#  with_items:
-#    - "/dev/vdb"
-#    - "/dev/sda"
-#    - "/dev/sdb"
-#- debug: msg={{ remove_pvs }}
-## pvremove -y -ff {{ item.storage_dev }}
-
+# pvremove -y -ff /dev/vdb /dev/sda /dev/sdb
 
 - name: Purge Block Devices
   shell: |
     dd if=/dev/zero of=/dev/{{ item.phy_dev }} bs=4096 count=1 conv=notrunc
   register: purge_block_devices
-  ignore_errors: true
   when: item.node == inventory_hostname
+  ignore_errors: true
   with_items:
     - "{{ _cluster.mgs }}"
     - "{{ _cluster.mdts }}"
     - "{{ _cluster.osts }}"
 - debug: msg={{ purge_block_devices }}
-  # dd if=/dev/zero of={{ item.storage_dev }} bs=4096 count=1 conv=notrunc
 
 
 - name: Wipe Filesystem in NVME Devices
   shell: |
     wipefs -a /dev/{{ item.phy_dev }}
   register: wipefs_nvme_devices
-  ignore_errors: true
   when: item.node == inventory_hostname
+  ignore_errors: true
   with_items:
     - "{{ _cluster.mgs }}"
     - "{{ _cluster.mdts }}"
     - "{{ _cluster.osts }}"
 - debug: msg={{ wipefs_nvme_devices }}
-#  wipefs -a {{ item.storage_dev }}
 
 
 - name: Delete Zap in NVME Devices
   shell: |
     sgdisk --zap-all --delete /dev/{{ item.phy_dev }}
   register: delete_zap_nvme_devices
-  ignore_errors: true
   when: item.node == inventory_hostname
+  ignore_errors: true
   with_items:
     - "{{ _cluster.mgs }}"
     - "{{ _cluster.mdts }}"
     - "{{ _cluster.osts }}"
 - debug: msg={{ delete_zap_nvme_devices }}
-# sgdisk --zap-all --delete {{ item.storage_dev }}
 
 
 - name: Discard Block ID
   shell: |
     blkdiscard /dev/{{ item.phy_dev }}
   register: discard_block_id
-  ignore_errors: true
   when: item.node == inventory_hostname
+  ignore_errors: true
   with_items:
     - "{{ _cluster.mgs }}"
     - "{{ _cluster.mdts }}"
     - "{{ _cluster.osts }}"
 - debug: msg={{ discard_block_id }}
-# blkdiscard {{ item.storage_dev }}
 
