--- a/roles/lustre/tasks/main.yaml
+++ b/roles/lustre/tasks/main.yaml
@@ -6,95 +6,108 @@
 
 - name: Set Facts for Network and Packages Informations
   import_tasks: set-facts.yml
-  tags: install, uninstall, setup, remove, enable, disable
-
-
-- name: Enable Firewalld
-  import_tasks: ext/enable-firewall.yml
-  tags: enable, setup
-  when: ( firewall is defined and firewall == true )
-
-
-- name: Enable Lustre Pakcage Repo
-  import_tasks: enable-lustre-repo.yml
-  tags: enable, setup
-  when: ( repo is defined and repo == true )
-
-
-- name: Install Lustre Pakcages
-  import_tasks: install-pkgs.yml
-  tags: install, setup
-  when: ( pkgs is defined and pkgs == true )
-
-
-- name: Enable Lustre Network
-  import_tasks: enable-lustre-network.yml
-  tags: enable, setup
-  when: ( network is defined and network == true )
-
-
-- name: Ping Test Lustre Network
-  import_tasks: lnet-ping-test.yml
-  tags: test
-  when: ( network is defined and network == true )
-
-
-- name: Format Lustre Devices
-  import_tasks: format-devices.yml
-  tags: format
-  when: ( fs is defined and fs == true )
-
-
-- name: Mount Lustre Directories
-  import_tasks: mount-dirs.yml
-  tags: mount
-  when: ( dir is defined and dir == true ) and inventory_hostname in groups['cluster']
-
-
-- name: Umount Lustre Directories
-  import_tasks: umount-dirs.yml
-  tags: umount
-  when: ( dir is defined and dir == true ) and inventory_hostname in groups['cluster']
-
-
-- name: Mount Lustre Client
-  import_tasks: mount-client.yml
-  tags: mount, setup
-  when: ( client is defined and client == true ) and inventory_hostname in groups['client']
-
-
-- name: Umount Lustre Client
-  import_tasks: umount-client.yml
-  tags: umount, client
-  when: ( client is defined and client == true ) and inventory_hostname in groups['client']
-
-
-- name: Disable Lustre Network
-  import_tasks: disable-lustre-network.yml
-  tags: disable, remove
-  when: ( network is defined and network == true )
-
-
-- name: Cleanup Devices
-  import_tasks: cleanup-devices.yml
-  tags: clean
-  when: ( dev is defined and dev == true ) and inventory_hostname in groups['cluster']
-
-
-- name: Uninstall Lustre Pakcages
-  import_tasks: uninstall-pkgs.yml
-  tags: uninstall, remove
-  when: ( pkgs is defined and pkgs == true )
-
-
-- name: Disable Lustre Pakcage Repo
-  import_tasks: disable-lustre-repo.yml
-  tags: disable, remove
-  when: ( repo is defined and repo == true )
+  tags: install, uninstall, setup, remove, enable, disable, test
 
 
 - name: Disable Firewalld
   import_tasks: ext/disable-firewall.yml
-  tags: disable, remove
-  when: ( firewall is defined and firewall == true )
+  tags: disable, remove, install
+  when: ( firewall is defined and firewall == true ) or ( lustre_all is defined and lustre_all == true )
+
+
+- name: Enable Lustre Pakcage Repo
+  import_tasks: enable-repo.yml
+  tags: enable, setup, install
+  when: ( repo is defined and repo == true ) or ( lustre_all is defined and lustre_all == true )
+
+
+- name: Install Lustre Pakcages
+  import_tasks: install-pkgs.yml
+  tags: setup, install
+  when: ( pkgs is defined and pkgs == true ) or ( lustre_all is defined and lustre_all == true )
+
+
+- name: Enable Lustre Network
+  import_tasks: enable-network.yml
+  tags: enable, setup, install
+  when: ( network is defined and network == true ) or ( lustre_all is defined and lustre_all == true )
+
+
+- name: Ping Test Lustre Network
+  import_tasks: lnet-ping-test.yml
+  tags: test, install
+  when: ( network is defined and network == true ) or ( lustre_all is defined and lustre_all == true )
+
+
+- name: Raw Format Lustre Devices
+  import_tasks: format-raw-devices.yml
+  tags: format, install
+  when: ( raw is defined and raw == true ) or ( lustre_all is defined and lustre_all == true )
+
+
+- name: Format Lustre Devices
+  import_tasks: format-devices.yml
+  tags: format, install
+  when: ( fs is defined and fs == true ) or ( lustre_all is defined and lustre_all == true )
+
+
+- name: Mount Lustre Directories
+  import_tasks: mount-dirs.yml
+  tags: mount, install
+  when: (( dir is defined and dir == true ) or ( lustre_all is defined and lustre_all == true )) and inventory_hostname in groups['cluster']
+
+
+- name: Mount Lustre Client
+  import_tasks: mount-client.yml
+  tags: mount, setup, install
+  when: (( client is defined and client == true ) or ( lustre_all is defined and lustre_all == true )) and inventory_hostname in groups['client']
+
+
+- name: Umount Lustre Client
+  import_tasks: umount-client.yml
+  tags: umount, uninstall
+  when: (( client is defined and client == true ) or ( lustre_all is defined and lustre_all == true )) and inventory_hostname in groups['client']
+
+
+- name: Umount Lustre Directories
+  import_tasks: umount-dirs.yml
+  tags: umount, uninstall
+  when: (( dir is defined and dir == true ) or ( lustre_all is defined and lustre_all == true )) and inventory_hostname in groups['cluster']
+
+
+- name: Disable Lustre Network
+  import_tasks: disable-network.yml
+  tags: disable, uninstall
+  when: ( network is defined and network == true ) or ( lustre_all is defined and lustre_all == true )
+
+
+- name: Raw Format Lustre Devices
+  import_tasks: format-raw-devices.yml
+  tags: clean, uninstall
+  when: ( dev is defined and dev == true ) or ( lustre_all is defined and lustre_all == true )
+
+
+- name: Uninstall Lustre Pakcages
+  import_tasks: uninstall-pkgs.yml
+  tags: remove, uninstall
+  when: ( pkgs is defined and pkgs == true ) or ( lustre_all is defined and lustre_all == true )
+
+
+- name: Disable Lustre Pakcage Repo
+  import_tasks: disable-repo.yml
+  tags: disable, uninstall
+  when: ( repo is defined and repo == true ) or ( lustre_all is defined and lustre_all == true )
+
+
+- name: Enable Firewalld
+  import_tasks: ext/enable-firewall.yml
+  tags: enable, uninstall
+  when: ( firewall is defined and firewall == true ) or ( lustre_all is defined and lustre_all == true )
+
+
+#- name: Cleanup Devices
+#  import_tasks: cleanup-devices.yml
+#  tags: clean, uninstall
+#  when: (( dev is defined and dev == true ) or ( lustre_all is defined and lustre_all == true )) and inventory_hostname in groups['cluster']
+
 
