--- a/roles/lustre/tasks/disable-network.yml
+++ b/roles/lustre/tasks/disable-network.yml
@@ -5,6 +5,7 @@
     state: stopped
     enabled: false
   register: disable_lnet
+  ignore_errors: true
 
 
 - name: Delete LNET Config
@@ -12,4 +13,5 @@
     path: /etc/lnet.conf
     state: absent
   register: delete_lnet_config
+  ignore_errors: true
 
