--- a/roles/lustre/tasks/umount-client.yml
+++ b/roles/lustre/tasks/umount-client.yml
@@ -34,6 +34,7 @@
 #    path: "{{ item.mount_prefix }}/{{ item.fs_name }}"
 #    state: mounted
 #  register: mount_lustrefs
+#  ignore_errors: true
 #  with_items: "{{ _cluster.client }}"
 #  # opts: "skpath=/etc/lustre,defaults,_netdev,noauto,x-systemd.automount,x-systemd.requires=lnet.service"
 
