Working Lustre with DNE and Multipath Simulated as SAN

--- a/roles/iscsi/tasks/ext/enable-firewall.yml
+++ b/roles/iscsi/tasks/ext/enable-firewall.yml
@@ -33,3 +33,7 @@
 #  notify: Restart Firewall
 #  when: inventory_hostname in groups['mds']
 
+
+#- name: Allow iSCSI Target Service Port
+#  firewall-cmd --add-service=iscsi-target --permanent
+
